<resources>
    <string name="app_name">proyecto mole</string>
    <string name="MOLE">MOLE</string>
    <string name="titulo2">Mole Blanco o de Novia</string>
    <string name="titulo3">Mole Amarillo o Amarillito</string>
    <string name="titulo4">Mole Almendrado</string>
    <string name="titulo5">Mole Alcaparrado</string>
    <string name="titulo6">Mole de Ajonjolí</string>
    <string name="titulol7">Mole Coloradito o Mole istmeño</string>
    <string name="titulol8">Mancha Manteles</string>
    <string name="titulo9">Mole Poblano</string>
    <string name="titulo10">Mole Verde</string>
    <string name="titulo11">Mole Rojo</string>
    <string name="titulo">Inspirada en las haciendas pulqueras, hace 30 años preparó este platillo para el banquete de la boda de su hija. “El pulque en este caso de coco, aromatizado con hoja de aguacate asada es magnífico para hacer salsas, porque suaviza la carne y le da sabor al mismo tiempo”.Existe una gran variedad de versiones, pero la más tradicional se hace a base de nueces, papas, cacahuate, almendras, pasas, pulque y chile güero.Existe una gran variedad de versiones, pero la más tradicional se hace a base de nueces, papas, cacahuate, almendras, pasas, pulque y chile güero.</string>
    <string name="titulo13">Regresar</string>
    <string name="titulo15">MOLE AMARILLO, AMARILLITO IR A LA RECETA Deliciosa Receta de Mole Amarillo o Amarillito.  La palabra mole proviene del náhuatl molli, salsa o guiso, está claro que en la época prehispánica se hicieron diversas salsas molidas y complejas, que al paso de los años y siglos se fueron modificando, refinando y adaptando a los nuevos ingredientes y usos culinarios. Este mole es uno de los famosos 7 moles de Oaxaca, se realiza a partir de una pasta compleja que lleva ingredientes como jitomate, miltomate, clavo, pimienta, comino y masa de maíz para espesar. Toma su nombre de los chiles con que se prepara: chilhuacle amarillo, costeño y güero y se sazona con hoja santa, la cual perfuma el mole y le da un delicioso sabor anisado.</string>
    <string name="titulo16">Regresar</string>
    <string name="titulo17">Es originario del estado de Puebla, se hace a partir de la molienda de almendras, chile ancho y guajillo. Fue un mole común entre las clases altas por el costo de los insumos, tiene un sabor dulzón y una textura aterciopelada.Esta receta de mole almendrado forma parte las recetas “consentidas” de mi abuela, las llama así porque son fáciles, deliciosas y perfectas para consentir a sus seres queridos.Preparar este mole de almendras o “mole almendrado” en casa es más fácil de lo que te imaginas, en tan solo 4 pasos podrás disfrutar de este tradicional platillo de la comida mexicana.</string>
    <string name="titulo18">Regresar</string>
    <string name="titulo19">Otro mole regional de Oaxaca.El estado de Oaxaca goza de una gran riqueza cultural y gastronómica reconocida a nivel mundial. Este lugar se divide en 8 regiones, cada una de las cuales tiene una variedad de moles diferentes, se dice que los moles de Oaxaca en realidad se cuentan por docenas, lo cual es totalmente cierto.</string>
    <string name="titulo20">Regresar</string>
    <string name="titulo22">Otro de los 7 moles de estado de Oaxaca. Mole de tono ladrillo y usa ingredientes como: chile ancho, chile pasilla, jitomate, almendras, orégano y ajo. Sirve para acompañar carne de puerco generalmente.</string>
    <string name="titulo23">Regresar</string>
    <string name="titulo24">Mole de origen Oaxaqueño que se difundió por el país, con diversas versiones. Mole afrutado de picor ligero. La versión más conocida lleva frutos como perón, ciruela, plátano macho, y camote amarillo o camote blanco. * Se sirve con rebanadas de plátano macho y piña, fritas en mantequilla.</string>
    <string name="titulo26">Regresar</string>
    <string name="titulo25">Es el mole más famoso del país, dice la leyenda urbana que fue inventado con motivo de un concurso gastronómico, para el cual una monja adoptó la receta prehispánica y le agregó chocolate de metate. Chiles mulatos, pasillas, anchos, y ajonjolí, son ingredientes característicos de este mole.</string>
    <string name="titulo27">Regresar</string>
    <string name="titulo28">Se elabora con chile verde, poblano o cuaresmeño, hierbas y hojas verdes, semillas de calabaza (pepitas), cebolla, ajo, comino, epazote, etc. El resultado un guiso que sorprende por su complejidad. Este mole se puede servir con pollo, carne de res o carne de puerco, en enchiladas, en tostadas, o con arroz blanco. * la otra variedad de Mole Verde el caldoso hecho con salsa verde, acompañado de calabacitas, ejotes, habas verdes y carne de res, pollo o puerco.</string>
    <string name="titulo29">Regresar</string>
</resources>
